Attach redis to demo app